[package]
name = "snap-coin-interactive-wallet"
version = "0.1.0"
authors = ["Ice"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
chrono = "0.4.43"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-clipboard = "0.3.0"
dirs = "6.0.0"
futures-channel = "0.3.31"
rand = "0.9.2"
rfd = "0.17.2"
snap-coin = "12.0.0"
tokio = { version = "1.49.0", features = ["full"] }
webbrowser = "1.1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
